


public static class InputButtons
{
	public const ushort BasicAttack = 1 << 0;
	public const ushort SpecialAttack = 1 << 1;
	public const ushort Jump = 1 << 2;
	public const ushort Slide = 1 << 3;
	public const ushort Guard1 = 1 << 4;
	public const ushort Guard2 = 1 << 5;
	public const ushort Sneak = 1 << 6;
	public const ushort Grab = 1 << 7;

	public const ushort MoveAlt = 1 << 8;
	public const ushort LookAlt = 1 << 9;
	public const ushort Misc1 = 1 << 10;
	public const ushort Misc2 = 1 << 11;
	public const ushort Misc3 = 1 << 12;
	public const ushort Misc4 = 1 << 13;
	public const ushort Menu = 1 << 14;
	public const ushort MenuAlt = 1 << 15;
}
